--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -39,6 +39,7 @@ steps:
         serviceAccount.name=$(serviceAccountHarvester)
         env.PORT=$(port)
         env.NODE_ENV=$(nodeEnv)
+        env.APPINSIGHTS_SECRET_NAME=$(appinsightsSecretName)
         env.AZURE_KEYVAULT_URL=$(keyVaultUri)
         env.ELASTICSEARCH_API=$(elasticSearchApi)
         hostName=$(hostName)
