--- a/ncea-fe/values/values.sandbox.yaml
+++ b/ncea-fe/values/values.sandbox.yaml
@@ -7,7 +7,7 @@ image:
 
 imagePullSecrets: []
 nameOverride: ""
-fullnameOverride: "ncea-search-application"
+fullnameOverride: ""
 
 serviceAccount:  
   create: false 
