--- a/ncea-fe/values/values.dev.yaml
+++ b/ncea-fe/values/values.dev.yaml
@@ -7,7 +7,7 @@ image:
 
 imagePullSecrets: []
 nameOverride: ""
-fullnameOverride: "ncea-search-frontend"
+fullnameOverride: ""
 
 serviceAccount:  
   create: false 
