--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -37,12 +37,13 @@ steps:
         image.repository=$(containerRepositoryFullPath)
         image.tag=$(imageTag)
         serviceAccount.name=$(serviceAccountSearchWebApp)
+        env.HOST=$(hostName)
         env.PORT=$(port)
         env.NODE_ENV=$(nodeEnv)
         env.APPINSIGHTS_SECRET_NAME=$(appinsightsSecretName)
         env.AZURE_KEYVAULT_URL=$(keyVaultUri)
         env.ELASTICSEARCH_API=$(elasticSearchApi)
-        hostName=$(hostName)
+        
     install: true
     force: true
     releaseName: ${{ parameters.releaseName }}
