--- a/ncea-fe/templates/deployment.yaml
+++ b/ncea-fe/templates/deployment.yaml
@@ -56,6 +56,8 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}          
           env:
+          - name: HOST
+            value: "{{ .Values.env.HOST }}"
           - name: PORT
             value: "{{ .Values.env.PORT }}"
           - name: NODE_ENV
