--- a/ncea-fe/values/values.local.yaml
+++ b/ncea-fe/values/values.local.yaml
@@ -3,12 +3,11 @@ replicaCount: 1
 image:
   repository: nceapocsbox.azurecr.io/defra/ncea-fe
   pullPolicy: IfNotPresent
-  tag: "20240220.30_feature-298132-integerate-azure-appinsights"
+  tag: "20240225.13_feature-308801-create-deployment-pipeline"
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
-hostName:
 
 serviceAccount:  
   create: false 
@@ -59,13 +58,8 @@ tolerations: []
 affinity: {}
 
 env:
-- name: PORT
-  value: 80
-- name: NODE_ENV
-  value: sandbox
-- name: APPINSIGHTS_SECRET_NAME
-  value: ApplicationInsights--ConnectionString
-- name: AZURE_KEYVAULT_URL
-  value: https://nceapocsbox.vault.azure.net/
-- name: ELASTICSEARCH_API
-  value: http://elasticsearch.azure-adventures.co.uk/
+  PORT: 80
+  NODE_ENV: "sandbox"
+  APPINSIGHTS_SECRET_NAME: "ApplicationInsights--ConnectionString"
+  AZURE_KEYVAULT_URL: "https://nceapocsbox.vault.azure.net/"
+  ELASTICSEARCH_API: "http://elasticsearch.azure-adventures.co.uk/"
