--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -37,7 +37,7 @@ steps:
         image.repository=$(containerRepositoryFullPath)
         image.tag=$(imageTag)
         serviceAccount.name=$(serviceAccountSearchWebApp)
-        env.HOST=$(hostName)
+        ingress.hosts[0].host=$(hostName)
         env.PORT=$(port)
         env.NODE_ENV=$(nodeEnv)
         env.APPINSIGHTS_SECRET_NAME=$(appinsightsSecretName)
