--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -1,6 +1,13 @@
 
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
+resources:
+  repositories:
+  - repository: ncea-test-automation
+    type: github
+    endpoint: github
+    name: DEFRA/ncea-test-automation
+
 trigger:
   branches:
     include:
@@ -27,6 +34,9 @@ stages:
       - template: templates/variables-build.yml      
     steps:
       - template: steps-build-and-test.yaml
+      - ${{ if eq(variables.isPullRequest, true) }}:
+        - template: steps-build-test-automation-tools
+
       - template: steps-build-and-push-docker-images.yaml
       - template: steps-package-and-push-helm-charts.yaml
 
@@ -52,6 +62,7 @@ stages:
                 envName: sandbox
                 releaseName: ncea-fe-sandbox
                 aksServiceConnection: aksServiceConn-AZR-NCE-SND1
+            - template: steps-run-automated-tests.yaml   
 
 - stage: 'dev'
   displayName: 'Deploy to Dev'
