updated test folder path

--- a/pipeline/steps-run-automated-tests.yaml
+++ b/pipeline/steps-run-automated-tests.yaml
@@ -18,9 +18,9 @@ steps:
         **\*Specs.dll
         !**\*TestAdapter.dll
         !**\obj\**  
-      searchFolder: $(Pipeline.Workspace)
+      searchFolder: $(Pipeline.Workspace)/tests/net481
       testRunTitle: End-to-end tests - Test
-      runSettingsFile: $(Pipeline.Workspace)/CI.runsettings
+      runSettingsFile: $(Pipeline.Workspace)/tests/net481/CI.runsettings
       # Handled via SpecFlow+ Runner
       rerunFailedTests: false
       publishRunAttachments: true
