--- a/pipeline/steps-build-test-automation-tools.yaml
+++ b/pipeline/steps-build-test-automation-tools.yaml
@@ -20,5 +20,5 @@ steps:
   - task: PublishPipelineArtifact@1
     condition: and(succeeded(), or(eq(variables['isMain'], 'true'), eq(variables['isPullRequest'], 'true')))
     inputs:
-      targetPath: $(Build.SourcesDirectory)/src/bin/$(buildConfiguration)
+      targetPath: $(Build.SourcesDirectory)/src/bin/$(buildConfiguration)/net481
       artifactName: tests
