Build fail - fixes

--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -30,28 +30,28 @@ stages:
       - template: steps-build-and-push-docker-images.yaml
       - template: steps-package-and-push-helm-charts.yaml
 
-- stage: 'sandbox'
-  displayName: 'Deploy to Sandbox'
-  dependsOn: Build
-  condition:  and(succeeded(), eq(variables.isPullRequest, true))  
-  jobs:
-  - deployment: Deploy
-    pool:
-      vmImage: 'ubuntu-latest'
-    variables:
-      - template: templates/variables-sandbox.yml
-      - name : aksServiceConnection
-        value: aksServiceConn-AZR-NCE-SND1
-    environment: sandbox 
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-            - template: steps-deploy-helm-charts.yaml
-              parameters:
-                envName: sandbox
-                releaseName: ncea-fe-sandbox
-                aksServiceConnection: aksServiceConn-AZR-NCE-SND1
+# - stage: 'sandbox'
+#   displayName: 'Deploy to Sandbox'
+#   dependsOn: Build
+#   condition:  and(succeeded(), eq(variables.isPullRequest, true))  
+#   jobs:
+#   - deployment: Deploy
+#     pool:
+#       vmImage: 'ubuntu-latest'
+#     variables:
+#       - template: templates/variables-sandbox.yml
+#       - name : aksServiceConnection
+#         value: aksServiceConn-AZR-NCE-SND1
+#     environment: sandbox 
+#     strategy:
+#       runOnce:
+#         deploy:
+#           steps:
+#             - template: steps-deploy-helm-charts.yaml
+#               parameters:
+#                 envName: sandbox
+#                 releaseName: ncea-fe-sandbox
+#                 aksServiceConnection: aksServiceConn-AZR-NCE-SND1
 
 - stage: 'dev'
   displayName: 'Deploy to Dev'
