--- a/ncea-fe/values/values.dev.yaml
+++ b/ncea-fe/values/values.dev.yaml
@@ -29,13 +29,15 @@ service:
 
 ingress:
   enabled: true
-  className: "webapprouting.kubernetes.azure.com"
-  annotations: {}
+  className: nginx
+  annotations: 
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/use-regex: "true"
   hosts:
     - host: 
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
   tls: []
 
 resources: {}
