--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -26,8 +26,10 @@ steps:
   displayName: 'Helm Deploy'
   condition: succeeded()
   inputs:
-    connectionType: 'Kubernetes Service Connection'
-    kubernetesServiceConnection: ${{ parameters.aksServiceConnection }}
+    connectionType: Azure Resource Manager
+    azureSubscriptionEndpoint: ${{ parameters.armServiceConnection }}
+    azureResourceGroup: $(aksResourceGroupName)
+    kubernetesCluster : $(aksClusterName)
     namespace: $(aksNamespace)
     command: 'upgrade'
     chartType: 'FilePath'
