Fix parameter name

--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -3,7 +3,7 @@ parameters:
     type: string
   - name: releaseName
     type: string
-  - name: aksServiceConnection
+  - name: armServiceConnection
     type: string
 
 steps:
