--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -82,7 +82,7 @@ stages:
 - stage: 'dev'
   displayName: 'Deploy to Dev'
   dependsOn: Build
-  condition: and(succeeded(), and(eq(variables.isMain, true), eq(variables.deployToDev, true)))
+  condition: and(succeeded(), and(eq(variables.isPullRequest, true), eq(variables.deployToDev, true)))
   jobs:
   - deployment: Deploy
     pool:
