--- a/ncea-fe/values/values.sandbox.yaml
+++ b/ncea-fe/values/values.sandbox.yaml
@@ -30,12 +30,14 @@ service:
 ingress:
   enabled: true
   className: "webapprouting.kubernetes.azure.com"
-  annotations: {}
+  annotations: 
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/use-regex: "true"
   hosts:
     - host: 
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
   tls: []
 
 resources: {}
@@ -58,8 +60,7 @@ tolerations: []
 affinity: {}
 
 env:
-  PORT:
-  NODE_ENV:
-  APPINSIGHTS_SECRET_NAME: ApplicationInsights--ConnectionString
-  AZURE_KEYVAULT_URL:
-  ELASTICSEARCH_API:
+  PORT: 
+  NODE_ENV:   
+  AZURE_KEYVAULT_URL: 
+  ELASTICSEARCH_API: 
