updated pipeline for tst environment

--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -16,12 +16,12 @@ trigger:
 
 variables:
   - template: templates/variables-global.yml
-  - name: acrContainerRegistryServiceConnection
-    value: acr-AZR-NCE-DEV-TEMP
+  - name: azureServiceConnectionForAcr
+    value: AZR-NCE-DEV1  
   - name: deployToDev
     value: true
   - name: deployToTest
-    value: false
+    value: true
 
 stages:
   - stage: 'Build'
