--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -18,7 +18,18 @@ steps:
     archiveFilePatterns: '$(Pipeline.Workspace)/charts/*.tgz'
     cleanDestinationFolder: true
     overwriteExistingFiles: true
-    destinationFolder: '$(Pipeline.Workspace)/chart' 
+    destinationFolder: '$(Pipeline.Workspace)/chart'
+
+- task: HelmDeploy@0
+  displayName: Helm lint
+  condition: succeeded()
+  inputs:
+    connectionType: Azure Resource Manager
+    azureSubscriptionEndpoint: ${{ parameters.armServiceConnection }}
+    azureResourceGroup: $(aksResourceGroupName)
+    kubernetesCluster : $(aksClusterName)
+    command: lint
+    arguments: '$(Pipeline.Workspace)/chart/ncea-fe'
 
 - task: KubeloginInstaller@0
   inputs:
