--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "rimraf ./build && tsc && npm run copy-files",
     "copy-files": "ts-node copyNonTSFiles.ts",
     "json-server": "json-server ./src/services/mock-data.json --port 3300",
+    "classifier-json-server": "json-server --watch ./src/services/classifier-mock-data.json --port 3301",
     "lint": "npm run lint:javascript",
     "lint:javascript": "eslint --config tools/.eslintrc.js ./src/**/* --ext .js,.ts",
     "lint:javascript:fix": "eslint --config tools/.eslintrc.js ./src/**/* --fix --ext .js,.ts",
