--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -1,7 +1,7 @@
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
-resources:
-  repositories:
+# resources:
+#   repositories:
     # - repository: ncea-test-automation
     #   type: github
     #   endpoint: github
