--- a/ncea-fe/values/values.yaml
+++ b/ncea-fe/values/values.yaml
@@ -56,9 +56,14 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-volumes: []
+volumes:
+- name: elasticsearch-certs
+  secret:
+    secretName: elasticsearch-master-certs
 
-volumeMounts: []
+volumeMounts:
+- mountPath: /usr/share/elasticsearch/config/certs
+  name: elasticsearch-certs
 
 nodeSelector: {}
 
@@ -71,3 +76,5 @@ env:
   NODE_ENV: $(nodeEnd)
   AZURE_KEYVAULT_URL: $(keyVaultUri)
   ELASTICSEARCH_API: $(elasticSearchApi)
+  ES_USERNAME: $(elasticSearchUser)
+  ES_PASSWORD: $(elasticSearchPassword)
