--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -61,6 +61,7 @@ steps:
         env.ELASTICSEARCH_API=$(elasticSearchApi)
         env.ES_USERNAME=$(elasticSearchUser)
         env.ES_PASSWORD=$(elasticSearchPassword)
+        env.CLASSIFIER_API=$(classifierApiBaseUri)
     install: true
     force: true
     releaseName: ${{ parameters.releaseName }}
