--- a/ncea-fe/values/values.local.yaml
+++ b/ncea-fe/values/values.local.yaml
@@ -64,3 +64,4 @@ env:
   NODE_ENV: sandbox  
   AZURE_KEYVAULT_URL: https://devnceinfkvt1401.vault.azure.net/
   ELASTICSEARCH_API: http://elasticsearch.geonetwork.svc.cluster.local/
+  CLASSIFIER_API: https://dev-ncea-classifier.azure.defra.cloud/
