--- a/ncea-fe/values/values.yaml
+++ b/ncea-fe/values/values.yaml
@@ -78,3 +78,4 @@ env:
   ELASTICSEARCH_API: $(elasticSearchApi)
   ES_USERNAME: $(elasticSearchUser)
   ES_PASSWORD: $(elasticSearchPassword)
+  CLASSIFIER_API: $(classifierApiBaseUri)
