Read the apikey from the keyvault

--- a/ncea-fe/templates/deployment.yaml
+++ b/ncea-fe/templates/deployment.yaml
@@ -70,8 +70,10 @@ spec:
             value: "{{ .Values.env.ES_USERNAME }}"
           - name: ES_PASSWORD
             value: "{{ .Values.env.ES_PASSWORD }}"
-          - name: CLASSIFIER_API
+          - name: CLASSIFIER_API_URL
             value: "{{ .Values.env.CLASSIFIER_API }}"
+          - name: CLASSIFIER_API_KEY
+            value: "ApplicationInsights--ConnectionString"
       {{- with .Values.volumes }}
       volumes:
         {{- toYaml . | nindent 8 }}
