--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
+    "@azure/msal-node": "2.12.0",
     "@azure/identity": "4.0.1",
     "@azure/keyvault-secrets": "4.7.0",
     "@elastic/elasticsearch": "8.13.1",
