--- a/ncea-fe/values/values.local.yaml
+++ b/ncea-fe/values/values.local.yaml
@@ -66,3 +66,4 @@ env:
   ELASTICSEARCH_API: http://elasticsearch.geonetwork.svc.cluster.local/
   CLASSIFIER_API: https://dev-ncea-classifier.azure.defra.cloud/
   WEBDOMAIN: https://dev-ncea-search.azure.defra.cloud/
+  GTM_ID: GTM-PZJ4WBG7
