Updated tenant id

--- a/ncea-fe/templates/deployment.yaml
+++ b/ncea-fe/templates/deployment.yaml
@@ -72,8 +72,8 @@ spec:
             value: "{{ .Values.env.ES_PASSWORD }}"
           - name: CLASSIFIER_API_URL
             value: "{{ .Values.env.CLASSIFIER_API }}"
-          - name: CLASSIFIER_API_KEY
-            value: "nceaClassifierMicroServiceApiKey"
+          - name: CLASSIFIER_API_AUTHORITY
+            value: "{{ .Values.env.CLASSIFIER_API_AUTHORITY }}"
           - name: WEBDOMAIN
             value: "{{ .Values.env.WEBDOMAIN }}"
       {{- with .Values.volumes }}
