Added the force switch to az acr import command to overwrite existing tags if they exist

--- a/pipeline/steps-import-docker-images.yaml
+++ b/pipeline/steps-import-docker-images.yaml
@@ -14,6 +14,7 @@ steps:
       docker login $(acrContainerRegistryPre) -u $(acrUser) -p $PASSWORD
       echo "importing container"
       az acr import \
+        --force \
         --name $(acrContainerRegistryPreShort) \
         --source $(acrContainerRepositorySearchWebApp):$(imageTag) \
         --image $(acrContainerRepositorySearchWebApp):$(imageTag) \
