Updated Variable Groups

--- a/pipeline/templates/variables-pre.yml
+++ b/pipeline/templates/variables-pre.yml
@@ -1,4 +1,5 @@
 variables:
 - group: azureVariables-pre
 - group: searchWebAppVariables-pre
+- group: classifierMicroserviceVariables-pre
 - group: pipelineVariables
